# legends-of-champz-game

./: .gitignore  INTEGRATION_GUIDE.md  LICENSE  README.md  VIRTUALS_CUSTOM_FUNCTIONS.md  pyproject.toml
examples/: basic_agent.py
legends_of_champz/: __init__.py  client.py  exceptions.py  worker.py
