[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legends-of-champz-game"
version = "0.3.0"
description = "AI Agent SDK for the Legends of Champz Guardian Arena on Base L2"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]
keywords = ["blockchain", "base", "ai-agent", "virtuals", "game", "defi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://legends.champz.world"
Repository = "https://github.com/champz-world/legends-of-champz-game"
Documentation = "https://github.com/champz-world/legends-of-champz-game#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["legends_of_champz*"]
